Logo Animation Fix

--- a/index.html
+++ b/index.html
@@ -40,32 +40,28 @@
     <header>
         <nav class="navbar">
             <ul class="navbar-links navbar-links-left">
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="diensten.html">Diensten</a></li>
             </ul>
             <div class="navbar-logo-container">
-                <img id="navbar-logo" class="navbar-logo" src="/assets/logo.png" alt="débeauty">
+                <a href="index.html" class="navbar-logo-link">
+                    <img id="navbar-logo" class="navbar-logo" src="/assets/logo.png" alt="débeauty">
+                </a>
             </div>
             <ul class="navbar-links navbar-links-right">
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="over.html">Over ons</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main style="opacity:0; pointer-events:none;">
-        <section id="services">
-            <h2>Diensten</h2>
-            <p>Onze schoonheidsbehandelingen voor jou.</p>
-        </section>
-        <section id="about">
-            <h2>Over Débeauty</h2>
+        <section id="home">
+            <h2>Welkom bij Débeauty</h2>
             <p>Dé plek voor verzorging en ontspanning in Baasrode.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Adres: Bookmolenstraat 124, 9200 Baasrode<br>Telefoon: 0479698709</p>
         </section>
     </main>
     <footer style="opacity:0; pointer-events:none;">
-        <p>&copy; 2024 Débeauty. Alle rechten voorbehouden.</p>
+        <p>&copy; 2025 Débeauty</p>
     </footer>
     <script src="scripts/main.js"></script>
 </body>
