--- a/index.html
+++ b/index.html
@@ -39,16 +39,14 @@
     </div>
     <header>
         <nav class="navbar">
-            <ul class="navbar-links navbar-links-left">
+            <ul class="navbar-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="diensten.html">Diensten</a></li>
-            </ul>
-            <div class="navbar-logo-container">
-                <a href="index.html" class="navbar-logo-link">
-                    <img id="navbar-logo" class="navbar-logo" src="/assets/logo.png" alt="débeauty">
-                </a>
-            </div>
-            <ul class="navbar-links navbar-links-right">
+                <li class="navbar-logo-container">
+                    <a href="index.html" class="navbar-logo-link">
+                        <img id="navbar-logo" class="navbar-logo" src="/assets/logo.png" alt="débeauty">
+                    </a>
+                </li>
                 <li><a href="over.html">Over ons</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
