--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 </head>
 <body>
     <div id="overlay" class="overlay">
-        <img id="overlay-logo" class="overlay-logo" src="/assets/logo.png" alt="débeauty">
+        <img id="overlay__logo" class="overlay__logo" src="/assets/logo.png" alt="débeauty">
     </div>
     <header>
         <nav class="navbar">
-            <ul class="navbar-links">
+            <ul class="navbar__links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="diensten.html">Diensten</a></li>
-                <li class="navbar-logo-container">
-                    <a href="index.html" class="navbar-logo-link">
-                        <img id="navbar-logo" class="navbar-logo" src="/assets/logo.png" alt="débeauty">
+                <li class="navbar__logo-container">
+                    <a href="index.html" class="navbar__logo-link">
+                        <img id="navbar__logo" class="navbar__logo" src="/assets/logo.png" alt="débeauty">
                     </a>
                 </li>
                 <li><a href="over.html">Over ons</a></li>
