--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <footer style="opacity:0; pointer-events:none;">
         <p>&copy; 2025 Débeauty</p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
