--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </main>
     <footer style="opacity:0; pointer-events:none;">
         <p>&copy; 2025 Débeauty</p>
+        <p class="footer__credit">Website door <a href="https://www.dehayez.com/" target="_blank" rel="noopener">Dehayez</a></p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="scripts/main.js"></script>
