--- a/over.html
+++ b/over.html
@@ -41,6 +41,7 @@
     </main>
     <footer>
         <p>&copy; 2025 Débeauty</p>
+        <p class="footer__credit">Website door <a href="https://www.dehayez.com/" target="_blank" rel="noopener">Dehayez</a></p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="scripts/main.js"></script>
