Info & UI Update

--- a/diensten.html
+++ b/diensten.html
@@ -34,9 +34,245 @@
         </nav>
     </header>
     <main>
-        <section id="diensten">
-            <h2>Diensten</h2>
-            <p>Onze schoonheidsbehandelingen voor jou. (Vul hier je diensten in, zoals gezichtsbehandelingen, manicure, pedicure, massages, enz.)</p>
+        <section class="page-header">
+            <h1 class="page-header__title">Onze Diensten</h1>
+            <p class="page-header__subtitle">Ontdek onze uitgebreide schoonheidsbehandelingen</p>
+        </section>
+
+        <section class="services">
+            <div class="services__grid">
+                <div class="service-card">
+                    <div class="service-card__icon">✨</div>
+                    <h3 class="service-card__title">Gelaatsbehandeling</h3>
+                    <p class="service-card__description">Aangepast aan ieders huidtype</p>
+                    <div class="service-card__price">Basis: €54<br>Intensief: €70-90</div>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-card__icon">💅</div>
+                    <h3 class="service-card__title">Manicure</h3>
+                    <p class="service-card__description">Nagels vijlen, nagelriemen zuiver maken, handcrème</p>
+                    <div class="service-card__price">€20</div>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-card__icon">🦶</div>
+                    <h3 class="service-card__title">Pedicure</h3>
+                    <p class="service-card__description">Onderhoudspedicure binnen de 6 weken</p>
+                    <div class="service-card__price">€25</div>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-card__icon">🧘</div>
+                    <h3 class="service-card__title">Massage</h3>
+                    <p class="service-card__description">Volledige lichaamsmassage</p>
+                    <div class="service-card__price">€60</div>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-card__icon">💆</div>
+                    <h3 class="service-card__title">Epilatie</h3>
+                    <p class="service-card__description">Wenkbrauwen, bovenlip, benen, bikini, oksels</p>
+                    <div class="service-card__price">Vanaf €7</div>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-card__icon">💄</div>
+                    <h3 class="service-card__title">Make-up</h3>
+                    <p class="service-card__description">Dag en avond make-up</p>
+                    <div class="service-card__price">€20-25</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="detailed-services">
+            <h2 class="detailed-services__title">Gedetailleerde Prijslijst</h2>
+            
+            <div class="service-category">
+                <h3 class="service-category__title">Gelaatsbehandeling</h3>
+                <div class="service-category__items">
+                    <div class="service-item">
+                        <span class="service-item__name">Basis gelaatsbehandeling Clinicare</span>
+                        <span class="service-item__price">€54</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Intensieve gelaatsbehandeling Clinicare</span>
+                        <span class="service-item__price">€70-90</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Masker refresh</span>
+                        <span class="service-item__price">€75</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Masker pure</span>
+                        <span class="service-item__price">€72</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Masker glow</span>
+                        <span class="service-item__price">€75</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Masker Ime reverse</span>
+                        <span class="service-item__price">€80</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Masker X3M pure pore</span>
+                        <span class="service-item__price">€75</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Masker carboxytherapy</span>
+                        <span class="service-item__price">€90</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-category">
+                <h3 class="service-category__title">Manicure</h3>
+                <div class="service-category__items">
+                    <div class="service-item">
+                        <span class="service-item__name">Nagels vijlen, nagelriemen zuiver maken, handcrème</span>
+                        <span class="service-item__price">€20</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Knippen en vijlen van de nagels</span>
+                        <span class="service-item__price">€7</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Lakken</span>
+                        <span class="service-item__price">€6</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Gelish plaatsen</span>
+                        <span class="service-item__price">€15</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Verwijderen Gelish</span>
+                        <span class="service-item__price">€10</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-category">
+                <h3 class="service-category__title">Pedicure</h3>
+                <div class="service-category__items">
+                    <div class="service-item">
+                        <span class="service-item__name">Onderhoudspedicure binnen de 6 weken</span>
+                        <span class="service-item__price">€25</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Intensieve pedicure</span>
+                        <span class="service-item__price">€30</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Lakken</span>
+                        <span class="service-item__price">€6</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Gelish plaatsen</span>
+                        <span class="service-item__price">€15</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Verwijderen Gelish</span>
+                        <span class="service-item__price">€10</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-category">
+                <h3 class="service-category__title">Epilatie</h3>
+                <div class="service-category__items">
+                    <div class="service-item">
+                        <span class="service-item__name">Wenkbrauwen onderhoud</span>
+                        <span class="service-item__price">€7</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Wenkbrauwen vorm geven</span>
+                        <span class="service-item__price">€10</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Bovenlip</span>
+                        <span class="service-item__price">€7</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Gelaat</span>
+                        <span class="service-item__price">€15</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Onderbenen</span>
+                        <span class="service-item__price">€20</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Benen volledig</span>
+                        <span class="service-item__price">€32</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Bikini</span>
+                        <span class="service-item__price">€12-18</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Oksels</span>
+                        <span class="service-item__price">€12</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-category">
+                <h3 class="service-category__title">Massage</h3>
+                <div class="service-category__items">
+                    <div class="service-item">
+                        <span class="service-item__name">Volledige lichaamsmassage</span>
+                        <span class="service-item__price">€60</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Rug- en nekmassage</span>
+                        <span class="service-item__price">€25</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-category">
+                <h3 class="service-category__title">Make-up</h3>
+                <div class="service-category__items">
+                    <div class="service-item">
+                        <span class="service-item__name">Dag make-up</span>
+                        <span class="service-item__price">€20</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Avond make-up</span>
+                        <span class="service-item__price">€25</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-category">
+                <h3 class="service-category__title">Permanente Make-up (door Anelies Meysmans)</h3>
+                <div class="service-category__items">
+                    <div class="service-item">
+                        <span class="service-item__name">Deepliner (zeer fijn boven)</span>
+                        <span class="service-item__price">€175</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Eyeliner boven</span>
+                        <span class="service-item__price">€150</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Desingliner</span>
+                        <span class="service-item__price">€200</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Eyeliner onder</span>
+                        <span class="service-item__price">€145</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Full lips</span>
+                        <span class="service-item__price">€350</span>
+                    </div>
+                    <div class="service-item">
+                        <span class="service-item__name">Microblading wenkbrauwen</span>
+                        <span class="service-item__price">€300</span>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
