--- a/index.html
+++ b/index.html
@@ -58,9 +58,34 @@
         </nav>
     </header>
     <main style="opacity:0; pointer-events:none;">
-        <section id="home">
-            <h2>Welkom bij Débeauty</h2>
-            <p>Dé plek voor verzorging en ontspanning in Baasrode.</p>
+        <section class="hero">
+            <div class="hero__content">
+                <h1 class="hero__title">Welkom bij Débeauty</h1>
+                <p class="hero__subtitle">Dé plek voor verzorging en ontspanning in Baasrode</p>
+                <div class="hero__cta">
+                    <a href="diensten.html" class="btn btn--primary">Ontdek onze diensten</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="features">
+            <div class="features__grid">
+                <div class="feature">
+                    <div class="feature__icon">✨</div>
+                    <h3 class="feature__title">Schoonheidsbehandelingen</h3>
+                    <p class="feature__text">Professionele gezichts- en lichaamsbehandelingen</p>
+                </div>
+                <div class="feature">
+                    <div class="feature__icon">💅</div>
+                    <h3 class="feature__title">Nagelverzorging</h3>
+                    <p class="feature__text">Manicure, pedicure en nagelstyling</p>
+                </div>
+                <div class="feature">
+                    <div class="feature__icon">🧘</div>
+                    <h3 class="feature__title">Ontspanning</h3>
+                    <p class="feature__text">Massages en wellness behandelingen</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer style="opacity:0; pointer-events:none;">
