--- a/over.html
+++ b/over.html
@@ -34,9 +34,67 @@
         </nav>
     </header>
     <main>
-        <section id="over">
-            <h2>Over ons</h2>
-            <p>Maak kennis met ons team en onze filosofie. (Vul hier info in over het salon, het team, missie, enz.)</p>
+        <section class="page-header">
+            <h1 class="page-header__title">Over Débeauty</h1>
+            <p class="page-header__subtitle">Ontdek ons verhaal en onze passie voor schoonheid</p>
+        </section>
+
+        <section class="about">
+            <div class="about__content">
+                <div class="about__text">
+                    <h2 class="about__subtitle">Onze Missie</h2>
+                    <p class="about__description">
+                        Bij Débeauty geloven we dat iedereen het recht heeft om zich mooi en zelfverzekerd te voelen. 
+                        Ons team van ervaren schoonheidsspecialisten staat klaar om jou te helpen ontspannen en 
+                        je beste zelf naar boven te halen.
+                    </p>
+                </div>
+            </div>
+
+            <div class="team">
+                <h2 class="team__title">Ons Team</h2>
+                <div class="team__grid">
+                    <div class="team-member">
+                        <div class="team-member__avatar">👩‍💼</div>
+                        <h3 class="team-member__name">Debbie</h3>
+                        <p class="team-member__role">Eigenaresse & Schoonheidsspecialiste</p>
+                        <p class="team-member__bio">Met meer dan 20 jaar ervaring in de schoonheidsbranche</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="external-partner">
+                <h2 class="external-partner__title">Externe Partner</h2>
+                <div class="external-partner__grid">
+                    <div class="external-partner__member">
+                        <div class="external-partner__avatar">💄</div>
+                        <h3 class="external-partner__name">Anelies</h3>
+                        <p class="external-partner__role">Permanente Make-up Specialist</p>
+                        <p class="external-partner__bio">Gespecialiseerd in permanente make-up en microblading</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="values">
+                <h2 class="values__title">Onze Waarden</h2>
+                <div class="values__grid">
+                    <div class="value">
+                        <div class="value__icon">🧘</div>
+                        <h3 class="value__title">Relaxatie</h3>
+                        <p class="value__text">Een moment van rust en ontspanning voor jou</p>
+                    </div>
+                    <div class="value">
+                        <div class="value__icon">✨</div>
+                        <h3 class="value__title">Vitaliteit</h3>
+                        <p class="value__text">Je natuurlijke schoonheid naar boven brengen</p>
+                    </div>
+                    <div class="value">
+                        <div class="value__icon">❤️</div>
+                        <h3 class="value__title">Warmte</h3>
+                        <p class="value__text">Persoonlijke aandacht in een warme sfeer</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
