--- a/diensten.html
+++ b/diensten.html
@@ -21,15 +21,19 @@
     <header>
         <nav class="navbar">
             <ul class="navbar__links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="diensten.html">Diensten</a></li>
+                <li class="navbar__left-links">
+                    <a href="index.html">Home</a>
+                    <a href="diensten.html">Diensten</a>
+                </li>
                 <li class="navbar__logo-container">
                     <a href="index.html" class="navbar__logo-link">
                         <img id="navbar__logo" class="navbar__logo" src="/assets/logo.png" alt="débeauty">
                     </a>
                 </li>
-                <li><a href="over.html">Over ons</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="navbar__right-links">
+                    <a href="over.html">Over ons</a>
+                    <a href="contact.html">Contact</a>
+                </li>
             </ul>
         </nav>
     </header>
