WIP: hamburger nav

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
     </div>
     <header>
         <nav class="navbar">
+            <div class="navbar__hamburger">
+                <span class="navbar__hamburger-line"></span>
+                <span class="navbar__hamburger-line"></span>
+                <span class="navbar__hamburger-line"></span>
+            </div>
             <ul class="navbar__links">
                 <li class="navbar__left-links">
                     <a href="index.html">Home</a>
@@ -60,6 +65,14 @@
                 </li>
             </ul>
         </nav>
+        <div class="navbar__mobile-overlay">
+            <div class="navbar__mobile-menu">
+                <a href="index.html" class="navbar__mobile-link">Home</a>
+                <a href="diensten.html" class="navbar__mobile-link">Diensten</a>
+                <a href="over.html" class="navbar__mobile-link">Over ons</a>
+                <a href="contact.html" class="navbar__mobile-link">Contact</a>
+            </div>
+        </div>
     </header>
     <main style="opacity:0; pointer-events:none;">
         <section class="hero">
