Add emojis to pricelist titles and update service card descriptions and prices
- Add emojis to service category titles in pricelist (matching service cards)
- Update service card descriptions to summarize all services in each category
- Update service card prices to show min-max range for each category

--- a/diensten.html
+++ b/diensten.html
@@ -48,42 +48,42 @@
                 <div class="service-card">
                     <div class="service-card__icon">✨</div>
                     <h3 class="service-card__title">Gelaatsbehandeling</h3>
-                    <p class="service-card__description">Aangepast aan ieders huidtype</p>
-                    <div class="service-card__price">Basis: €54<br>Intensief: €70-90</div>
+                    <p class="service-card__description">Basis en intensieve behandelingen, diverse maskers voor elke huidtype</p>
+                    <div class="service-card__price">€54-90</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon">💅</div>
                     <h3 class="service-card__title">Manicure</h3>
-                    <p class="service-card__description">Nagels vijlen, nagelriemen zuiver maken, handcrème</p>
-                    <div class="service-card__price">€20</div>
+                    <p class="service-card__description">Nagelverzorging, lakken en Gelish behandeling</p>
+                    <div class="service-card__price">€6-20</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon">🦶</div>
                     <h3 class="service-card__title">Pedicure</h3>
-                    <p class="service-card__description">Onderhoudspedicure binnen de 6 weken</p>
-                    <div class="service-card__price">€25</div>
+                    <p class="service-card__description">Onderhouds- en intensieve pedicure, lakken en Gelish behandeling</p>
+                    <div class="service-card__price">€6-30</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon">🧘</div>
                     <h3 class="service-card__title">Massage</h3>
-                    <p class="service-card__description">Volledige lichaamsmassage</p>
-                    <div class="service-card__price">€60</div>
+                    <p class="service-card__description">Volledige lichaamsmassage en rug- en nekmassage</p>
+                    <div class="service-card__price">€25-60</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon">💆</div>
                     <h3 class="service-card__title">Epilatie</h3>
-                    <p class="service-card__description">Wenkbrauwen, bovenlip, benen, bikini, oksels</p>
-                    <div class="service-card__price">Vanaf €7</div>
+                    <p class="service-card__description">Wenkbrauwen, gelaat, benen, bikini en oksels</p>
+                    <div class="service-card__price">€7-32</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon">💄</div>
                     <h3 class="service-card__title">Make-up</h3>
-                    <p class="service-card__description">Dag en avond make-up</p>
+                    <p class="service-card__description">Professionele dag en avond make-up</p>
                     <div class="service-card__price">€20-25</div>
                 </div>
             </div>
