Add emojis to pricelist category titles

--- a/diensten.html
+++ b/diensten.html
@@ -93,7 +93,7 @@
             <h2 class="detailed-services__title">Gedetailleerde Prijslijst</h2>
             
             <div class="service-category">
-                <h3 class="service-category__title">Gelaatsbehandeling</h3>
+                <h3 class="service-category__title">✨ Gelaatsbehandeling</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Basis gelaatsbehandeling Clinicare</span>
@@ -131,7 +131,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">Manicure</h3>
+                <h3 class="service-category__title">💅 Manicure</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Nagels vijlen, nagelriemen zuiver maken, handcrème</span>
@@ -157,7 +157,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">Pedicure</h3>
+                <h3 class="service-category__title">🦶 Pedicure</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Onderhoudspedicure binnen de 6 weken</span>
@@ -183,7 +183,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">Epilatie</h3>
+                <h3 class="service-category__title">💆 Epilatie</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Wenkbrauwen onderhoud</span>
@@ -221,7 +221,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">Massage</h3>
+                <h3 class="service-category__title">🧘 Massage</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Volledige lichaamsmassage</span>
@@ -235,7 +235,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">Make-up</h3>
+                <h3 class="service-category__title">💄 Make-up</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Dag make-up</span>
