--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <section class="hero">
             <div class="hero__content">
                 <h1 class="hero__title">Welkom bij Débeauty</h1>
-                <p class="hero__subtitle">Dé plek voor verzorging en ontspanning in Baasrode</p>
+                <p class="hero__subtitle">Dé plek voor verzorging en ontspanning in <strong>Baasrode</strong></p>
                 <div class="hero__cta">
                     <a href="diensten.html" class="btn btn--primary">Ontdek onze diensten</a>
                 </div>
