Fix masker name capitalization and correct typo: Masker Ime reverse -> Masker Time Reverse

--- a/diensten.html
+++ b/diensten.html
@@ -104,27 +104,27 @@
                         <span class="service-item__price">€70-90</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker refresh</span>
+                        <span class="service-item__name">Masker Refresh</span>
                         <span class="service-item__price">€75</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker pure</span>
+                        <span class="service-item__name">Masker Pure</span>
                         <span class="service-item__price">€72</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker glow</span>
+                        <span class="service-item__name">Masker Glow</span>
                         <span class="service-item__price">€75</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker Ime reverse</span>
+                        <span class="service-item__name">Masker Time Reverse</span>
                         <span class="service-item__price">€80</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker X3M pure pore</span>
+                        <span class="service-item__name">Masker X3M Pure Pore</span>
                         <span class="service-item__price">€75</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker carboxytherapy</span>
+                        <span class="service-item__name">Masker Carboxytherapy</span>
                         <span class="service-item__price">€90</span>
                     </div>
                 </div>
