--- a/index.html
+++ b/index.html
@@ -51,26 +51,26 @@
             </div>
             <ul class="navbar__links">
                 <li class="navbar__left-links">
-                    <a href="index.html">Home</a>
-                    <a href="diensten.html">Diensten</a>
+                    <a href="/">Home</a>
+                    <a href="/diensten">Diensten</a>
                 </li>
                 <li class="navbar__logo-container">
-                    <a href="index.html" class="navbar__logo-link">
+                    <a href="/" class="navbar__logo-link">
                         <img id="navbar__logo" class="navbar__logo" src="/assets/logo.png" alt="débeauty">
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="over.html">Over ons</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="/over">Over ons</a>
+                    <a href="/contact">Contact</a>
                 </li>
             </ul>
         </nav>
         <div class="navbar__mobile-overlay">
             <div class="navbar__mobile-menu">
-                <a href="index.html" class="navbar__mobile-link">Home</a>
-                <a href="diensten.html" class="navbar__mobile-link">Diensten</a>
-                <a href="over.html" class="navbar__mobile-link">Over ons</a>
-                <a href="contact.html" class="navbar__mobile-link">Contact</a>
+                <a href="/" class="navbar__mobile-link">Home</a>
+                <a href="/diensten" class="navbar__mobile-link">Diensten</a>
+                <a href="/over" class="navbar__mobile-link">Over ons</a>
+                <a href="/contact" class="navbar__mobile-link">Contact</a>
             </div>
         </div>
     </header>
@@ -80,7 +80,7 @@
                 <h1 class="hero__title">Welkom bij Débeauty</h1>
                 <p class="hero__subtitle">Dé plek voor verzorging en ontspanning in <strong>Baasrode</strong></p>
                 <div class="hero__cta">
-                    <a href="diensten.html" class="btn btn--primary">Ontdek onze diensten</a>
+                    <a href="/diensten" class="btn btn--primary">Ontdek onze diensten</a>
                 </div>
             </div>
         </section>
