--- a/over.html
+++ b/over.html
@@ -22,17 +22,17 @@
         <nav class="navbar">
             <ul class="navbar__links">
                 <li class="navbar__left-links">
-                    <a href="index.html">Home</a>
-                    <a href="diensten.html">Diensten</a>
+                    <a href="/">Home</a>
+                    <a href="/diensten">Diensten</a>
                 </li>
                 <li class="navbar__logo-container">
-                    <a href="index.html" class="navbar__logo-link">
+                    <a href="/" class="navbar__logo-link">
                         <img id="navbar__logo" class="navbar__logo" src="/assets/logo.png" alt="débeauty">
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="over.html">Over ons</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="/over">Over ons</a>
+                    <a href="/contact">Contact</a>
                 </li>
             </ul>
         </nav>
