--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav class="navbar">
             <ul class="navbar__links">
                 <li class="navbar__left-links">
