--- a/over.html
+++ b/over.html
@@ -20,6 +20,11 @@
 <body>
     <header class="header">
         <nav class="navbar">
+            <div class="navbar__hamburger">
+                <span class="navbar__hamburger-line"></span>
+                <span class="navbar__hamburger-line"></span>
+                <span class="navbar__hamburger-line"></span>
+            </div>
             <ul class="navbar__links">
                 <li class="navbar__left-links">
                     <a href="/">Home</a>
@@ -36,6 +41,14 @@
                 </li>
             </ul>
         </nav>
+        <div class="navbar__mobile-overlay">
+            <div class="navbar__mobile-menu">
+                <a href="/" class="navbar__mobile-link">Home</a>
+                <a href="/diensten" class="navbar__mobile-link">Diensten</a>
+                <a href="/over" class="navbar__mobile-link">Over ons</a>
+                <a href="/contact" class="navbar__mobile-link">Contact</a>
+            </div>
+        </div>
     </header>
     <main>
         <section class="page-header">
