Change 'Over ons' to 'Over mij' for sole proprietorship

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="/over">Over ons</a>
+                    <a href="/over">Over mij</a>
                     <a href="/contact">Contact</a>
                 </li>
             </ul>
@@ -80,7 +80,7 @@
             <div class="navbar__mobile-menu">
                 <a href="/" class="navbar__mobile-link">Home</a>
                 <a href="/diensten" class="navbar__mobile-link">Diensten</a>
-                <a href="/over" class="navbar__mobile-link">Over ons</a>
+                <a href="/over" class="navbar__mobile-link">Over mij</a>
                 <a href="/contact" class="navbar__mobile-link">Contact</a>
             </div>
         </div>
