--- a/over.html
+++ b/over.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Débeauty - Over ons</title>
+    <title>Débeauty - Over mij</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="/over">Over ons</a>
+                    <a href="/over">Over mij</a>
                     <a href="/contact">Contact</a>
                 </li>
             </ul>
@@ -45,7 +45,7 @@
             <div class="navbar__mobile-menu">
                 <a href="/" class="navbar__mobile-link">Home</a>
                 <a href="/diensten" class="navbar__mobile-link">Diensten</a>
-                <a href="/over" class="navbar__mobile-link">Over ons</a>
+                <a href="/over" class="navbar__mobile-link">Over mij</a>
                 <a href="/contact" class="navbar__mobile-link">Contact</a>
             </div>
         </div>
