Update content for sole proprietorship and add navbar spacing

--- a/over.html
+++ b/over.html
@@ -53,16 +53,16 @@
     <main>
         <section class="page-header">
             <h1 class="page-header__title">Over Débeauty</h1>
-            <p class="page-header__subtitle">Ontdek ons verhaal en onze passie voor schoonheid</p>
+            <p class="page-header__subtitle">Ontdek mijn verhaal en mijn passie voor schoonheid</p>
         </section>
 
         <section class="about">
             <div class="about__content">
                 <div class="about__text">
-                    <h2 class="about__subtitle">Onze Missie</h2>
+                    <h2 class="about__subtitle">Mijn Missie</h2>
                     <p class="about__description">
-                        Bij Débeauty geloven we dat iedereen het recht heeft om zich mooi en zelfverzekerd te voelen. 
-                        Ons team van ervaren schoonheidsspecialisten staat klaar om jou te helpen ontspannen en 
+                        Bij Débeauty geloof ik dat iedereen het recht heeft om zich mooi en zelfverzekerd te voelen. 
+                        Met jarenlange ervaring als schoonheidsspecialiste sta ik klaar om jou te helpen ontspannen en 
                         je beste zelf naar boven te halen.
                     </p>
                 </div>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="values">
-                <h2 class="values__title">Onze Waarden</h2>
+                <h2 class="values__title">Mijn Waarden</h2>
                 <div class="values__grid">
                     <div class="value">
                         <div class="value__icon">🧘</div>
