--- a/diensten.html
+++ b/diensten.html
@@ -52,8 +52,8 @@
     </header>
     <main>
         <section class="page-header">
-            <h1 class="page-header__title">Onze Diensten</h1>
-            <p class="page-header__subtitle">Ontdek onze uitgebreide schoonheidsbehandelingen</p>
+            <h1 class="page-header__title">Mijn Diensten</h1>
+            <p class="page-header__subtitle">Ontdek mijn uitgebreide schoonheidsbehandelingen</p>
         </section>
 
         <section class="services">
