--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Débeauty - Contact</title>
     
+    <!-- Font Preload -->
+    <link rel="preload" href="/webFonts/ParisAvenue/font.woff2" as="font" type="font/woff2" crossorigin>
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
