--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Débeauty</title>
 
+    <!-- Font Preload -->
+    <link rel="preload" href="/webFonts/ParisAvenue/font.woff2" as="font" type="font/woff2" crossorigin>
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -87,6 +90,7 @@
     </header>
     <main style="opacity:0; pointer-events:none;">
         <section class="hero">
+            <img class="hero__logo" src="/assets/logo.png" alt="débeauty">
             <div class="hero__content">
                 <h1 class="hero__title">Welkom bij Débeauty</h1>
                 <p class="hero__subtitle">Dé plek voor verzorging en ontspanning in <strong>Baasrode</strong></p>
